// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateApiRoute > generates basic route with stubs when no storage or auth 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { convertToModelMessages, streamText } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'

// Allow streaming responses up to 30 seconds
export const maxDuration = 30;

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '~/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { messages } = await req.json()

  // TODO: bring your own storage
  // Add conversation persistence here. Example:
  //   import { storage } from '~/lib/storage'
  //   await storage.saveMessages(conversationId, messages)

  const result = streamText({
    model: anthropic("claude-opus-4-5"),
    system: 'You are a helpful assistant.',
    messages: await convertToModelMessages(messages),
  })

  return result.toUIMessageStreamResponse({ sendReasoning: true, sendSources: true })
}
"
`;

exports[`generateApiRoute > includes auth guard when auth selected 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { convertToModelMessages, streamText } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { auth } from '~/auth'

// Allow streaming responses up to 30 seconds
export const maxDuration = 30;

export async function POST(req: Request) {
  const session = await auth()
  if (!session) return new Response('Unauthorized', { status: 401 })

  const { messages } = await req.json()

  // TODO: bring your own storage
  // Add conversation persistence here. Example:
  //   import { storage } from '~/lib/storage'
  //   await storage.saveMessages(conversationId, messages)

  const result = streamText({
    model: anthropic("claude-opus-4-5"),
    system: 'You are a helpful assistant.',
    messages: await convertToModelMessages(messages),
  })

  return result.toUIMessageStreamResponse({ sendReasoning: true, sendSources: true })
}
"
`;

exports[`generateApiRoute > includes storage import and onFinish persistence when storage component selected 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { convertToModelMessages, generateId, streamText } from 'ai'
import type { UIMessage } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { storage } from '~/lib/storage'

// Allow streaming responses up to 30 seconds
export const maxDuration = 30;

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '~/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { messages, conversationId } = await req.json()

  const result = streamText({
    model: anthropic("claude-opus-4-5"),
    system: 'You are a helpful assistant.',
    messages: await convertToModelMessages(messages),
    onFinish: async ({ response }) => {
      // Convert ResponseMessage[] → UIMessage[] so stored messages can be
      // passed back to useChat as initialMessages on conversation load.
      const assistantMessages: UIMessage[] = response.messages.map((m) => {
        const content = Array.isArray(m.content) ? m.content : [{ type: 'text', text: m.content }]
        return {
          id: generateId(),
          role: m.role as UIMessage['role'],
          parts: (content as Array<{ type: string; text?: string; [k: string]: unknown }>).flatMap((c) => {
            if (c.type === 'text') return [{ type: 'text' as const, text: c.text as string }]
            return []
          }),
          metadata: {},
        }
      })
      await storage.saveMessages(conversationId, [...messages, ...assistantMessages])
    },
  })

  return result.toUIMessageStreamResponse({ sendReasoning: true, sendSources: true })
}
"
`;

exports[`generateApiRoute > works with google provider 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { convertToModelMessages, streamText } from 'ai'
import { google } from '@ai-sdk/google'

// Allow streaming responses up to 30 seconds
export const maxDuration = 30;

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '~/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { messages } = await req.json()

  // TODO: bring your own storage
  // Add conversation persistence here. Example:
  //   import { storage } from '~/lib/storage'
  //   await storage.saveMessages(conversationId, messages)

  const result = streamText({
    model: google("gemini-2.0-flash"),
    system: 'You are a helpful assistant.',
    messages: await convertToModelMessages(messages),
  })

  return result.toUIMessageStreamResponse({ sendReasoning: true, sendSources: true })
}
"
`;

exports[`generateApiRoute > works with openai provider 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { convertToModelMessages, streamText } from 'ai'
import { openai } from '@ai-sdk/openai'

// Allow streaming responses up to 30 seconds
export const maxDuration = 30;

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '~/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { messages } = await req.json()

  // TODO: bring your own storage
  // Add conversation persistence here. Example:
  //   import { storage } from '~/lib/storage'
  //   await storage.saveMessages(conversationId, messages)

  const result = streamText({
    model: openai("gpt-5.4-nano"),
    system: 'You are a helpful assistant.',
    messages: await convertToModelMessages(messages),
  })

  return result.toUIMessageStreamResponse({ sendReasoning: true, sendSources: true })
}
"
`;

exports[`generateApiRoute — with interrupt > snapshot with interrupt enabled 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// DATA FLOW — native approval (AI SDK v6)
// ─────────────────────────────────────────────────────────────────────────────
// 1. Model calls a tool with needsApproval: true
// 2. SDK pauses; streams state: 'approval-requested' to client
// 3. ApprovalWidget detects the pending approval and renders Approve / Reject
// 4. User clicks → addToolApprovalResponse({ id, approved })
// 5. SDK resumes; tool.execute() runs if approved
// ─────────────────────────────────────────────────────────────────────────────

import { convertToModelMessages, streamText } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { APPROVAL_TOOLS } from '~/lib/interrupt-tools'

// Allow streaming responses up to 30 seconds
export const maxDuration = 30;

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '~/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { messages } = await req.json()

  // TODO: bring your own storage
  // Add conversation persistence here. Example:
  //   import { storage } from '~/lib/storage'
  //   await storage.saveMessages(conversationId, messages)

  const result = streamText({
    model: anthropic("claude-opus-4-5"),
    system: 'You are a helpful assistant.',
    messages: await convertToModelMessages(messages),
    tools: { ...APPROVAL_TOOLS },
  })

  return result.toUIMessageStreamResponse({ sendReasoning: true, sendSources: true })
}
"
`;

exports[`generateConversationByIdRoute > generates GET handler for single conversation 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { storage } from '~/lib/storage'

export async function GET(
  _req: Request,
  { params }: { params: Promise<{ id: string }> }
) {
  const { id } = await params
  const messages = await storage.getMessages(id)
  if (!messages.length) return Response.json({ error: 'not found' }, { status: 404 })
  return Response.json({ messages })
}
"
`;

exports[`generateConversationByIdRoute > includes auth guard when auth enabled 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { storage } from '~/lib/storage'
import { auth } from '~/auth'

export async function GET(
  _req: Request,
  { params }: { params: Promise<{ id: string }> }
) {
  const session = await auth()
  if (!session) return new Response('Unauthorized', { status: 401 })

  const { id } = await params
  const messages = await storage.getMessages(id)
  if (!messages.length) return Response.json({ error: 'not found' }, { status: 404 })
  return Response.json({ messages })
}
"
`;

exports[`generateConversationsRoute > generates GET and POST handlers 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { storage } from '~/lib/storage'

export async function POST() {
  const id = await storage.createConversation()
  return Response.json({ id, createdAt: new Date().toISOString() }, { status: 201 })
}

export async function GET() {
  const conversations = await storage.listConversations()
  return Response.json({ conversations })
}
"
`;

exports[`generateConversationsRoute > includes auth guard on both handlers when auth enabled 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { storage } from '~/lib/storage'
import { auth } from '~/auth'

export async function POST() {
  const session = await auth()
  if (!session) return new Response('Unauthorized', { status: 401 })

  const id = await storage.createConversation()
  return Response.json({ id, createdAt: new Date().toISOString() }, { status: 201 })
}

export async function GET() {
  const session = await auth()
  if (!session) return new Response('Unauthorized', { status: 401 })

  const conversations = await storage.listConversations()
  return Response.json({ conversations })
}
"
`;
